develop-5.1 to master sync:
Removing lines.

Signed-off-by: Aare Puusepp <aare.puusepp@smit.ee>